src/snapshots/multi_output_viewer__state__test__primary_output__buffers_bytes.snap
---
source: src/state.rs
description: "|state| { state.handle_primary_bytes(\"should not render\".as_bytes()); }"
---
# Rendered:
```

```


# Raw:
```

```
