src/snapshots/multi_output_viewer__state__test__primary_output__clears_secondary_output.snap
---
source: src/state.rs
description: "|state|\n    {\n        state.new_secondary_output(\"test secondary output\".into()).handle_primary_bytes(\"abc\".as_bytes()).render().unwrap();\n        state.handle_primary_bytes(\"def\\r\\n123\".as_bytes()).render().unwrap();\n    }"
---
# Rendered:
```
abcdef
123
> +++   0s test secondary output
```


# Raw:
```
abc[1G[1B> [38;5;11m+++[39m   0s test secondary output
[1G[1A[J[1A[3Cdef
123[1G[1B> [38;5;11m+++[39m   0s test secondary output

```
