src/snapshots/multi_output_viewer__state__test__primary_output__draws_secondary_output_after_content_and_restores_cursor_position.snap
---
source: src/state.rs
description: "|state|\n    {\n        state.new_secondary_output(\"test secondary output\".into()).handle_primary_bytes(\"abc\\r\\ndef\\r\\nghi\\x1b[3D\\x1b[1A\\x1b[3C\".as_bytes()).render().unwrap();\n        state.handle_primary_bytes(\"123\".as_bytes()).render().unwrap();\n    }"
---
# Rendered:
```
abc
def123
ghi
> ---   0s test secondary output
```


# Raw:
```
abc
def
ghi[3D[1A[3C[1G[2B> [38;5;10m---[39m   0s test secondary output
[1G[1A[J[2A[3C123[1G[2B> [38;5;10m---[39m   0s test secondary output

```
